fix site appearance on mobile

--- a/pkgdown/extra.css
+++ b/pkgdown/extra.css
@@ -7,7 +7,7 @@
   main + .col-md-3 {
     margin-left: unset;
     padding-left: 5rem;
-    max-width: 75%;
+    max-width: 100%;
   }
 }
 
